[package]
name = "snowaudit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = { version = "1.0", features = ["derive"] }
image = "0.23.14"
ansi_term = "0.12.1"
html-escape = "0.2.1"

